--- a/REUSE.toml
+++ b/REUSE.toml
@@ -35,6 +35,7 @@ path = [
     "src/images/folder_icon.png",
     "src/images/github.png",
     "src/images/grid_icon.png",
+    "src/images/keyboard_icon.png",
     "src/images/iconsize_icon.png",
     "src/images/ko-fi.png",
     "src/images/list_icon.png",
